<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context="com.example.l4z.testujemysobie.MainActivity">

    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></SearchView>

    <TextView
        android:id="@+id/mainTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/music_app"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/mainTextViewDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/buttonToMostPopular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/most_popular_songs" />

        <Button
            android:id="@+id/buttonToHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history" />

        <Button
            android:id="@+id/buttonToOwnSongs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_songs" />
    </LinearLayout>
</LinearLayout>
